--- a/OneDo/Themes/Generic.xaml
+++ b/OneDo/Themes/Generic.xaml
@@ -12,16 +12,15 @@
                     <Grid>
                         <Grid x:Name="CommandContainer" Margin="1">
                             <StackPanel x:Name="LeftCommandPanel" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
-                                <SymbolIcon Symbol="{TemplateBinding LeftIcon}" Foreground="{TemplateBinding LeftForeground}" />
-                                <TextBlock FontSize="14" Margin="10,0,0,0" Text="{TemplateBinding LeftLabel}" Foreground="{TemplateBinding LeftForeground}" />
+                                <FontIcon FontSize="16" Glyph="{TemplateBinding LeftGlyph}" Foreground="{TemplateBinding LeftForeground}" VerticalAlignment="Center" />
+                                <TextBlock FontSize="14" Margin="10,0,0,0" Text="{TemplateBinding LeftLabel}" Foreground="{TemplateBinding LeftForeground}" VerticalAlignment="Center" />
                                 <StackPanel.RenderTransform>
                                     <CompositeTransform></CompositeTransform>
                                 </StackPanel.RenderTransform>
                             </StackPanel>
-
                             <StackPanel x:Name="RightCommandPanel" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right">
-                                <TextBlock FontSize="14" Margin="0,0,10,0" Text="{TemplateBinding RightLabel}" Foreground="{TemplateBinding RightForeground}" />
-                                <SymbolIcon Symbol="{TemplateBinding RightIcon}" Foreground="{TemplateBinding RightForeground}" />
+                                <TextBlock FontSize="14" Margin="0,0,10,0" Text="{TemplateBinding RightLabel}" Foreground="{TemplateBinding RightForeground}" VerticalAlignment="Center" />
+                                <FontIcon FontSize="16" Glyph="{TemplateBinding RightGlyph}" Foreground="{TemplateBinding RightForeground}" VerticalAlignment="Center" />
                                 <StackPanel.RenderTransform>
                                     <CompositeTransform></CompositeTransform>
                                 </StackPanel.RenderTransform>
