--- a/OneDo/Views/Flyouts/TodoEditor.xaml
+++ b/OneDo/Views/Flyouts/TodoEditor.xaml
@@ -22,6 +22,13 @@
 
         <CommandBar Grid.Row="1">
             <CommandBar.PrimaryCommands>
+                <AppBarButton Label="Done"
+                              Visibility="{x:Bind VM.IsNew, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=!}"
+                              Command="{x:Bind VM.DoneCommand, Mode=OneWay}">
+                    <AppBarButton.Icon>
+                        <FontIcon Glyph="&#xE8FB;"/>
+                    </AppBarButton.Icon>
+                </AppBarButton>
                 <AppBarButton Label="Delete">
                     <AppBarButton.Flyout>
                         <Flyout>
