--- a/OneDo/Views/Pages/SplashScreenPage.xaml
+++ b/OneDo/Views/Pages/SplashScreenPage.xaml
@@ -18,13 +18,24 @@
         </Storyboard>
     </Page.Resources>
 
-    <Canvas Background="{ThemeResource SystemControlHighlightAccentBrush}">
-        <Image x:Name="SplashImage" Source="ms-appx:///Assets/SplashScreen.png"/>
-        <ProgressRing Name="SplashProgressRing"
-                      Foreground="{ThemeResource SystemControlForegroundChromeWhiteBrush}"
-                      Opacity="0"
-                      IsActive="True"
-                      Width="20"
-                      HorizontalAlignment="Center" />
-    </Canvas>
+    <Grid>
+        <Canvas Background="{ThemeResource SystemControlHighlightAccentBrush}">
+            <Image x:Name="SplashImage" Source="ms-appx:///Assets/SplashScreen.png"/>
+            <ProgressRing x:Name="SplashProgressRing"
+                          Foreground="{ThemeResource SystemControlForegroundChromeWhiteBrush}"
+                          Opacity="0"
+                          IsActive="True"
+                          Width="20"
+                          HorizontalAlignment="Center" />
+        </Canvas>
+
+        <TextBlock x:Name="SplashText"
+                   Foreground="{ThemeResource SystemControlForegroundChromeWhiteBrush}"
+                   Style="{ThemeResource BodyTextBlockStyle}"
+                   Opacity="{Binding Opacity, ElementName=SplashProgressRing}"
+                   Text="Loading..."
+                   VerticalAlignment="Bottom" 
+                   HorizontalAlignment="Center"
+                   Margin="24"/>
+    </Grid>
 </Page>
